syntax = "proto3";
option csharp_namespace = "Project.BookingService.Protos";

service ServiceInformationService  {
  rpc GetAllServicePackage (GetAllServicePackageRequest) returns (GetAllServicePackageResponse);
}

message GetAllServicePackageRequest  {
  repeated string ServicePackageIDs = 1;
}
message GetServicePackageResponse  {
  string ServicePackageID = 1;
  string ServicePackageName = 2;
  string Image = 3;
}
message GetAllServicePackageResponse  {
  repeated GetServicePackageResponse ServicePackage = 1;
}